# LOAS

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .yamlfmt  README.md  add_guids.py  biome.json  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  validate.yml
docs/: README.md  biome.json  cli.json  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json
docs/content/docs/: T1005.mdx  T1010.mdx  T1016.001.mdx  T1018.mdx  T1021.002.mdx  T1021.005.mdx  T1027.mdx  T1033.mdx  T1056.002.mdx  T1057.mdx  T1059.002.mdx  T1059.004.mdx  T1070.002.mdx  T1070.009.mdx  T1082.mdx  T1083.mdx  T1087.001.mdx  T1113.mdx  T1115.mdx  T1120.mdx  T1123.mdx  T1124.mdx  T1217.mdx  T1489.mdx  T1491.001.mdx  T1518.001.mdx  T1529.mdx  T1539.mdx  T1547.015.mdx  T1552.003.mdx  T1564.003.mdx  T1614.001.mdx  contributing.mdx  coverage.mdx  execution.mdx  index.mdx  meta.json
docs/src/: mdx-components.tsx
docs/src/app/: global.css  (+2 more)
scripts/T1115/: T1115.yaml
scripts/T1547.015/: T1547.015.yaml
templates/: osascript.j2  swift_javascript_wrapper.j2  swift_wrapper.j2  technique_markdown.j2
yaml/T1005/: T1005.yaml
yaml/T1010/: T1010.yaml
yaml/T1016.001/: T1016.001.yaml
yaml/T1018/: T1018.yaml
yaml/T1021.002/: T1021.002.yaml
yaml/T1021.005/: T1021.005.yaml
yaml/T1027/: T1027.yaml
yaml/T1033/: T1033.yaml
yaml/T1056.002/: T1056.002.yaml
yaml/T1057/: T1057.yaml
yaml/T1059.002/: T1059.002.yaml
yaml/T1059.004/: T1059.004.yaml
yaml/T1070.002/: T1070.002.yaml
yaml/T1070.009/: T1070.009.yaml
yaml/T1082/: T1082.yaml
yaml/T1083/: T1083.yaml
yaml/T1087.001/: T1087.001.yaml
yaml/T1113/: T1113.yaml
yaml/T1115/: T1115.yaml
yaml/T1120/: T1120.yaml
yaml/T1123/: T1123.yaml
yaml/T1124/: T1124.yaml
yaml/T1217/: T1217.yaml
yaml/T1489/: T1489.yaml
yaml/T1491.001/: T1491.001.yaml
yaml/T1518.001/: T1518.001.yaml
yaml/T1529/: T1529.yaml
yaml/T1539/: T1539.yaml
yaml/T1547.015/: T1547.015.yaml
yaml/T1552.003/: T1552.003.yaml
yaml/T1564.003/: T1564.003.yaml
yaml/T1614.001/: T1614.001.yaml
(+38 files in other folders)
