[project]
name = "loas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mitreattack-python>=4.0.2",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
    "requests>=2.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
