[project]
name = "loas"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mitreattack-python>=4.0.2",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
    "requests>=2.25.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.bumpversion]
current_version = "0.1.9"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/package.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""
