[project]
name = "loas"
version = "1.0.0"
description = "Helper file for loas.dev"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "mitreattack-python>=4.0.2",
  "pydantic>=2.11.7",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
  "requests>=2.25.0",
  "jinja2>=3.1.6",
]

[dependency-groups]
dev = ["bump-my-version>=1.2.0", "pre-commit>=4.2.0", "ruff>=0.12.0"]

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/package.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""
